--- a/src/Pages/MotoRoutePage.scss
+++ b/src/Pages/MotoRoutePage.scss
@@ -1,3 +1,14 @@
-.moto-route-map-container { 
-    height: 40em
+
+
+.map-details-container {
+    height: 40em;
+
+
+    .moto-route-map-container { 
+        height: 100%;
+    }
+
+    .moto-route-details-container { 
+        height: 100%; 
+    }
 }
